fixed about section spacing

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -74,7 +74,6 @@ h2 {
 @media (max-width: 650px) and (min-height: 550px) {
     #about .container .about-grid {
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 2fr;
     }
 
     #about .container .about-grid img {
